--- a/frontend/html/infoEasyTable.html
+++ b/frontend/html/infoEasyTable.html
@@ -20,8 +20,7 @@
         <ul id="navBar">
             <li><i class="fa-solid fa-utensils"></i><a href="EasyTableHome.html">Prenota ora!</a></li>
             <li><i class="fa-solid fa-circle-info"></i><a href="infoEasyTable.html">Come funziona il nostro sito?</a></li>
-            <li><i class="fa-solid fa-user-pen"></i><a href="modificaPrenotazione.html">Elimina o modifica
-                    prenotazione</a></li>
+            <li><i class="fa-solid fa-user-pen"></i><a href="modificaPrenotazione.html">Elimina o modifica prenotazione</a></li>
             <li><i class="fa-solid fa-lock"></i><a href="admin.html">Admin</a></li>
             <li id="logout"><i class="fa-solid fa-arrow-right-from-bracket"></i>Logout</li>
         </ul>
@@ -30,9 +29,7 @@
         <div id="contenitoreTesto">
             <p>
                 Vuoi sapere come funziona il nostro sito? È semplicissimo!
-                Nella <strong>pagina "Prenota ora!"</strong> inserisci la <strong>data</strong> della prenotazione e il
-                <strong>numero
-                    di persone</strong>.
+                Nella <strong>sezione "Prenota ora!"</strong> inserisci i <strong>dati richiesti</strong> <strong>della prenotazione</strong>.
                 A questo punto ti basta cliccare sul pulsante <em>“Prenota ora!”</em> e il gioco è fatto.
                 Inoltre, sempre nella Home, puoi visualizzare in ogni momento tutte le prenotazioni effettuate a tuo
                 nome. <br>
